# comfyui-sg-openai-client

./: README.md  __init__.py  api.py  pyproject.toml
nodes/: openai_chat_completion.py  openai_client.py  utils.py
web/: openai_chat_completion.js
